# arduinobot

./: README.md
arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_controller/config/: arduinobot_controllers.yaml
arduinobot_controller/launch/: controller.launch.py
arduinobot_description/: CMakeLists.txt  package.xml
arduinobot_description/launch/: display.launch.py  gazebo.launch.py
arduinobot_description/rviz/: display.rviz
arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_body.xacro  arduinobot_ros2_control.xacro
arduinobot_moveit/: CMakeLists.txt  package.xml
arduinobot_moveit/config/: arduinobot.srdf  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml
arduinobot_moveit/launch/: arduinobot_simulation.launch.py  moveit.launch.py
arduinobot_moveit/scripts/: rough.cpp  simple_moveit_interface.cpp
